# ansible-basic-sphinx-ext

./: .gitignore  CHANGELOG.rst  README.rst  build-css.sh  lint-all.sh  lint-flake8.sh  lint-pylint.sh  pyproject.toml  setup.py.sh  test-pytest.sh
.github/workflows/: build-css.yml  pythonlinters.yml
ansible_basic_sphinx_ext/: __init__.py  assets.py  pygments_lexer.py
tests/: test_lexer.py
