[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ansible_basic_sphinx_ext"
version = "0.1.0"
description = "Minimal Sphinx extension which adds some features from the Ansible doc site"
authors = ["Felix Fontein <felix@fontein.de>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/felixfontein/ansible-basic-sphinx-ext"
packages = [
    { include = "ansible_basic_sphinx_ext" },
    { include = "tests", format = "sdist" }
]

[tool.poetry.urls]
"Bug tracker" = "https://github.com/felixfontein/ansible-basic-sphinx-ext/issues"
"Changelog" = "https://github.com/felixfontein/ansible-basic-sphinx-ext/tree/main/CHANGELOG.rst"

[tool.poetry.dependencies]
python = "^3.6.0"
pygments = "*"
sphinx = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
codecov = "*"
pylint = "^2.6.0"

[tool.isort]
line_length = 100
multi_line_output = 0
balanced_wrapping = true
